# webp-animation

./: Cargo.toml
examples/: decode_animation.rs
fuzz/: Cargo.toml
src/: decoder.rs  encoder.rs  encoder_config.rs  lib.rs
